[FUL-94][MAC] Fix wrapping of long names

--- a/assets/stylesheets/base/_order_details.scss
+++ b/assets/stylesheets/base/_order_details.scss
@@ -86,7 +86,8 @@
 
   .item {
     width: 65%;
-    overflow-wrap: break-word;
+    overflow-wrap: break-word; /* Chrome */
+    word-wrap: break-word; /* Internet Explorer, Firefox, Safari  */
   }
 
   .item-status {
